[project]
name = "mini-judge"
version = "0.1.0"
description = "A simple online judge system supporting Python and C/C++"
authors = [
    {name = "Shengyu Ye", email = "ysy007@mail.ustc.edu.cn"},
]
dependencies = [
    "fastapi",
    "uvicorn",
    "redis",
    "pydantic",
    "pydantic-settings",
    "python-multipart",
    "rich",
    "psutil",
    "datasets",
    "huggingface_hub",
    "hf_transfer",
]
requires-python = ">=3.10"
readme = "README.md"
license = {file = "LICENSE"}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "N",    # flake8-noqa
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=app"

[tool.coverage.run]
source = ["app"]
omit = ["tests/*"]
